# openrelik-server

./: .coverage  .coveragerc  .gitignore  Dockerfile  README.md  Tiltfile  git_diff  pyproject.toml  settings.toml  settings_example.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image-mediator.yaml  docker-image.yaml  python-test.yaml
openrelik_server/: config.py  main.py
openrelik_server/api/v1/: configs.py  schemas.py  users.py
openrelik_server/auth/: google.py
openrelik_server/datastores/sql/: __init__.py  database.py
openrelik_server/datastores/sql/crud/: folder.py  workflow.py
openrelik_server/datastores/sql/models/: file.py  user.py  workflow.py
openrelik_server/lib/: file_hashes.py  llm_prompts.py
openrelik_server/mediator/: Dockerfile  mediator.py
openrelik_server/plugins/llm/: interface.py  manager.py  vertexai.py
src/: .coveragerc  admin.py  api_test.py  config.py  healthz.py  main.py
src/api/v1/: configs.py  external_storages.py  files.py  folders.py  groups.py  healthz.py  metrics.py  schemas.py  taskqueue.py  users.py  websockets.py  workflows.py
src/auth/: common.py  google.py  local.py  oidc.py
src/datastores/sql/: __init__.py  alembic.ini  database.py
src/datastores/sql/alembic/: env.py
src/datastores/sql/alembic/versions/: 056d4d155b41_initial_migration.py  05c14b5e27ab_make_user_email_optional.py  09f3a28f92cd_remove_old_api_keys_model.py  0d0800088b4a_add_source_file_to_file_model.py  16b42ecdc7a2_redesign_user_model.py  49974ebaed96_add_storage_provider_to_folder_model.py  75458b35f1b5_add_roles_and_groups.py  807fb2e99394_add_filechat_models.py  8139bf3ba1ca_add_purged_fields.py  b20df176dd1b_add_external_mount_to_folder.py  b489c6196eba_add_storage_provider_to_file_model.py  b4a468e25358_many_to_many_between_task_and_input_.py  b7d67e6bb29e_rename_group_column.py  bda54b7325a8_add_original_path_to_file_model.py  (+6 more)
src/datastores/sql/crud/: authz.py  external_storage.py  file.py  folder.py  group.py  user.py  workflow.py
src/datastores/sql/models/: external_storage.py  file.py  folder.py  group.py  role.py  roles.py  user.py  workflow.py
src/importers/gcp/: Dockerfile  file_utils.py  importer.py
src/lib/: celery_utils.py  constants.py  duckdb_utils.py  file_hashes.py  investigation_utils.py  llm_file_chat.py  llm_prompts.py  llm_summary.py  reporting_utils.py  stream_manager.py  tracing.py  workflow_utils.py
src/mediator/: Dockerfile  README.md  mediator.py
src/metrics/: Dockerfile  exporter.py
src/plugins/edr/: interface.py  manager.py
src/plugins/llm/: __init__.py  interface.py  manager.py  ollama.py  vertexai.py
src/tests/: admin_test.py  conftest.py  healthz_test.py  test_delete_external_storage.py  test_external_storage_path.py  test_folder_storage.py  test_sync_external_mount.py  test_unmount_external_folder.py
src/tests/api/: conftest.py  healthz_test.py
src/tests/api/v1/: configs_test.py  conftest.py  external_storages_test.py  files_test.py  folders_test.py  groups_test.py  healthz_test.py  metrics_test.py  taskqueue_test.py  users_test.py  workflows_test.py
src/tests/auth/: common_test.py  google_test.py  local_test.py
src/tests/datastores/: file_test.py  folder_test.py  user_test.py  workflow_test.py
src/tests/importers/gcp/: file_utils_test.py  importer_test.py
src/tests/lib/: celery_utils_test.py  duckdb_utils_test.py  file_hashes_test.py  llm_file_chat_test.py  llm_summary_test.py  reporting_utils_test.py  stream_manager_test.py  workflow_utils_test.py
src/tests/mediator/: test_mediator.py
