[tool.poetry]
name = "openrelik-server"
version = "2024.09.19"
description = "Experimental forensic workflow system"
authors = ["Johan Berggren <jberggren@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
Authlib = "^1.3.1"
itsdangerous = "^2.1.2"
SQLAlchemy = "^2.0.27"
requests = "^2.31.0"
google-cloud-aiplatform = "^1.43.0"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
celery = {extras = ["redis"], version = "^5.3.6"}
psycopg2-binary = "^2.9.9"
python-magic = "^0.4.27"
google-auth = "^2.29.0"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.0.2"
black = "^24.2.0"
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
