[tool.poetry]
name = "openrelik-server"
version = "0.6.0"
description = "Experimental forensic workflow system"
authors = ["Johan Berggren <jberggren@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
Authlib = "^1.3.1"
itsdangerous = "^2.1.2"
SQLAlchemy = "^2.0.27"
requests = "^2.32.4"
httpx = "^0.27.0"
python-jose = { extras = ["cryptography"], version = "^3.4.0" }
python-multipart = "^0.0.18"
aiofiles = "^23.2.1"
celery = { extras = ["redis"], version = "^5.3.6" }
psycopg2-binary = "^2.9.9"
python-magic = "^0.4.27"
google-auth = "^2.29.0"
alembic = "^1.13.2"
argon2-cffi = "^23.1.0"
typer = "^0.12.5"
prometheus-client = "^0.21.0"
openrelik-common = { git = "https://github.com/rgayon/openrelik-common.git", branch = "moreotel" }
openrelik-ai-common = "~0.5.0"
opentelemetry-instrumentation-celery = "^0.53b1"
opentelemetry-instrumentation-fastapi = "^0.53b1"
opentelemetry-exporter-otlp = "1.32.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.0.2"
pytest-mock = "^3.14.0"
pytest-celery = "^1.1.3"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"
black = "^24.2.0"
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = false
omit = ["src/tests/*", "src/datastores/sql/models/*"]
